[package]
name = "jc-wrapper"
version = "0.1.0"
edition = "2021"
description = "A very simple wrapper for jc. Can be used directly on Command"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
thiserror = "1.0"
